src/parser.output
Terminals unused in grammar

   T_NEWLINE
   T_MODULO
   T_NOT
   T_QUESTIONM
   T_COLON
   T_LOG
   T_EXP
   T_SQRT
   T_RIGHT_OP
   T_LEFT_OP
   T_PTR_OP


Grammar

    0 $accept: ROOT $end

    1 ROOT: BASE

    2 BASE: FUNCTIONLIST
    3     | FUNCTIONLIST ALLSTATE
    4     | DECLARATIONLIST
    5     | FACTOR

    6 FUNCTIONLIST: DECLARATIONLIST FUNCTION
    7             | FUNCTION
    8             | FUNCTIONLIST FUNCTION
    9             | FUNCTIONLIST DECLARATIONLIST FUNCTION
   10             | FUNCTION T_SEMICOLON

   11 FUNCTION: TYPE T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   12         | TYPE T_VARIABLE T_LBRACKET T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   13         | TYPE T_VARIABLE T_LBRACKET T_RBRACKET T_LCURLY T_RCURLY
   14         | TYPE T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY T_RCURLY
   15         | TYPE T_VARIABLE T_LBRACKET T_RBRACKET
   16         | TYPE T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET

   17 PARAMLIST: PARAM
   18          | PARAMLIST T_COMMAR PARAM

   19 PARAM: TYPE T_VARIABLE

   20 ALLSTATE: DECLARATIONLIST STATEMENTLIST
   21         | STATEMENTLIST
   22         | DECLARATIONLIST

   23 STATEMENTLIST: STATEMENT
   24              | STATEMENT T_SEMICOLON
   25              | STATEMENTLIST STATEMENT
   26              | STATEMENTLIST STATEMENT T_SEMICOLON

   27 STATEMENT: T_VARIABLE ASSIGNMENT_OP EXPR
   28          | T_RETURN EXPR T_SEMICOLON
   29          | INCDEC T_VARIABLE
   30          | T_VARIABLE INCDEC
   31          | T_RETURN T_VARIABLE INCDEC T_SEMICOLON
   32          | T_RETURN INCDEC T_VARIABLE T_SEMICOLON
   33          | IFLOOP
   34          | WHILE
   35          | FORLOOP

   36 IFLOOP: T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   37       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY
   38       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY T_ELSE T_LCURLY ALLSTATE T_RCURLY
   39       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY T_ELSE T_LCURLY T_RCURLY
   40       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY T_ELSE T_LCURLY ALLSTATE T_RCURLY
   41       | T_IF T_LBRACKET COMPARE T_RBRACKET T_LCURLY T_RCURLY T_ELSE T_LCURLY T_RCURLY
   42       | T_IF T_LBRACKET FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

   43 WHILE: T_WHILE T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   44      | T_WHILE T_LBRACKET COMPARE T_RBRACKET ALLSTATE T_RCURLY
   45      | T_WHILE T_LBRACKET FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   46      | T_WHILE T_LBRACKET FACTOR T_RBRACKET T_LCURLY T_RCURLY

   47 FORLOOP: T_FOR T_LBRACKET DECLARATION COMPARE T_SEMICOLON STATEMENT T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

   48 FUNCTIONCALL: T_VARIABLE T_LBRACKET ARGUMENTLIST T_RBRACKET
   49             | T_VARIABLE T_LBRACKET T_RBRACKET

   50 ARGUMENTLIST: ARGUMENT
   51             | ARGUMENTLIST T_COMMAR ARGUMENT

   52 ARGUMENT: EXPR

   53 DECLARATIONLIST: DECLARATION
   54                | DECLARATIONLIST DECLARATION

   55 DECLARATION: TYPE T_VARIABLE T_SEMICOLON
   56            | TYPE T_VARIABLE T_EQUAL EXPR T_SEMICOLON

   57 EXPR: TERM
   58     | EXPR T_PLUS TERM
   59     | EXPR T_MINUS TERM

   60 TERM: TERM T_TIMES FACTOR
   61     | TERM T_DIVIDE FACTOR
   62     | FACTOR

   63 FACTOR: T_NUMBER
   64       | T_VARIABLE
   65       | T_LBRACKET EXPR T_RBRACKET
   66       | T_QUOTE T_VARIABLE T_QUOTE
   67       | T_QUOTE T_NUMBER T_QUOTE
   68       | FUNCTIONCALL

   69 TYPE: T_NUMINT
   70     | T_CHAR

   71 COMPARE: COMPARETERM
   72        | COMPARE CON_OPANDOR COMPARETERM

   73 COMPARETERM: COMPARETERM COND_OP COMPARITORS
   74            | COMPARITORS

   75 COMPARITORS: EXPR COND_OP EXPR
   76            | T_LBRACKET COMPARE T_RBRACKET

   77 COND_OP: T_EQ_OP
   78        | T_NE_OP
   79        | T_GREATERTHAN
   80        | T_LESSTHAN
   81        | T_LE_OP
   82        | T_GE_OP

   83 CON_OPANDOR: T_AND_OP
   84            | T_OR_OP

   85 INCDEC: T_INC_OP
   86       | T_DEC_OP

   87 ASSIGNMENT_OP: T_EQUAL
   88              | T_MUL_ASSIGN
   89              | T_DIV_ASSIGN
   90              | T_MOD_ASSIGN
   91              | T_ADD_ASSIGN
   92              | T_SUB_ASSIGN
   93              | T_LEFT_ASSIGN
   94              | T_RIGHT_ASSIGN
   95              | T_AND_ASSIGN
   96              | T_XOR_ASSIGN
   97              | T_OR_ASSIGN


Terminals, with rules where they appear

$end (0) 0
error (256)
T_COMMAR (258) 18 51
T_NEWLINE (259)
T_RETURN (260) 28 31 32
T_MODULO (261)
T_GREATERTHAN (262) 79
T_LESSTHAN (263) 80
T_NOT (264)
T_WHILE (265) 43 44 45 46
T_ELSE (266) 38 39 40 41
T_FOR (267) 47
T_QUESTIONM (268)
T_COLON (269)
T_TIMES (270) 60
T_PLUS (271) 58
T_DIVIDE (272) 61
T_MINUS (273) 59
T_LBRACKET (274) 11 12 13 14 15 16 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 65 76
T_RBRACKET (275) 11 12 13 14 15 16 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 65 76
T_LOG (276)
T_EXP (277)
T_SQRT (278)
T_NUMBER (279) 63 67
T_VARIABLE (280) 11 12 13 14 15 16 19 27 29 30 31 32 48 49 55 56 64
    66
T_LCURLY (281) 11 12 13 14 36 37 38 39 40 41 42 43 45 46 47
T_RCURLY (282) 11 12 13 14 36 37 38 39 40 41 42 43 44 45 46 47
T_NUMINT (283) 69
T_SEMICOLON (284) 10 24 26 28 31 32 47 55 56
T_IF (285) 36 37 38 39 40 41 42
T_EQUAL (286) 56 87
T_MUL_ASSIGN (287) 88
T_DIV_ASSIGN (288) 89
T_MOD_ASSIGN (289) 90
T_ADD_ASSIGN (290) 91
T_SUB_ASSIGN (291) 92
T_LEFT_ASSIGN (292) 93
T_RIGHT_ASSIGN (293) 94
T_AND_ASSIGN (294) 95
T_XOR_ASSIGN (295) 96
T_OR_ASSIGN (296) 97
T_LE_OP (297) 81
T_GE_OP (298) 82
T_EQ_OP (299) 77
T_NE_OP (300) 78
T_RIGHT_OP (301)
T_LEFT_OP (302)
T_INC_OP (303) 85
T_DEC_OP (304) 86
T_PTR_OP (305)
T_AND_OP (306) 83
T_OR_OP (307) 84
T_CHAR (308) 70
T_QUOTE (309) 66 67


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
ROOT (56)
    on left: 1, on right: 0
BASE (57)
    on left: 2 3 4 5, on right: 1
FUNCTIONLIST (58)
    on left: 6 7 8 9 10, on right: 2 3 8 9
FUNCTION (59)
    on left: 11 12 13 14 15 16, on right: 6 7 8 9 10
PARAMLIST (60)
    on left: 17 18, on right: 11 14 16 18
PARAM (61)
    on left: 19, on right: 17 18
ALLSTATE (62)
    on left: 20 21 22, on right: 3 11 12 36 38 39 40 42 43 44 45 47
STATEMENTLIST (63)
    on left: 23 24 25 26, on right: 20 21 25 26
STATEMENT (64)
    on left: 27 28 29 30 31 32 33 34 35, on right: 23 24 25 26 47
IFLOOP (65)
    on left: 36 37 38 39 40 41 42, on right: 33
WHILE (66)
    on left: 43 44 45 46, on right: 34
FORLOOP (67)
    on left: 47, on right: 35
FUNCTIONCALL (68)
    on left: 48 49, on right: 68
ARGUMENTLIST (69)
    on left: 50 51, on right: 48 51
ARGUMENT (70)
    on left: 52, on right: 50 51
DECLARATIONLIST (71)
    on left: 53 54, on right: 4 6 9 20 22 54
DECLARATION (72)
    on left: 55 56, on right: 47 53 54
EXPR (73)
    on left: 57 58 59, on right: 27 28 52 56 58 59 65 75
TERM (74)
    on left: 60 61 62, on right: 57 58 59 60 61
FACTOR (75)
    on left: 63 64 65 66 67 68, on right: 5 42 45 46 60 61 62
TYPE (76)
    on left: 69 70, on right: 11 12 13 14 15 16 19 55 56
COMPARE (77)
    on left: 71 72, on right: 36 37 38 39 40 41 43 44 47 72 76
COMPARETERM (78)
    on left: 73 74, on right: 71 72 73
COMPARITORS (79)
    on left: 75 76, on right: 73 74
COND_OP (80)
    on left: 77 78 79 80 81 82, on right: 73 75
CON_OPANDOR (81)
    on left: 83 84, on right: 72
INCDEC (82)
    on left: 85 86, on right: 29 30 31 32
ASSIGNMENT_OP (83)
    on left: 87 88 89 90 91 92 93 94 95 96 97, on right: 27


State 0

    0 $accept: . ROOT $end

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_NUMINT    shift, and go to state 4
    T_CHAR      shift, and go to state 5
    T_QUOTE     shift, and go to state 6

    ROOT             go to state 7
    BASE             go to state 8
    FUNCTIONLIST     go to state 9
    FUNCTION         go to state 10
    FUNCTIONCALL     go to state 11
    DECLARATIONLIST  go to state 12
    DECLARATION      go to state 13
    FACTOR           go to state 14
    TYPE             go to state 15


State 1

   65 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_QUOTE     shift, and go to state 6

    FUNCTIONCALL  go to state 11
    EXPR          go to state 16
    TERM          go to state 17
    FACTOR        go to state 18


State 2

   63 FACTOR: T_NUMBER .

    $default  reduce using rule 63 (FACTOR)


State 3

   48 FUNCTIONCALL: T_VARIABLE . T_LBRACKET ARGUMENTLIST T_RBRACKET
   49             | T_VARIABLE . T_LBRACKET T_RBRACKET
   64 FACTOR: T_VARIABLE .

    T_LBRACKET  shift, and go to state 19

    $default  reduce using rule 64 (FACTOR)


State 4

   69 TYPE: T_NUMINT .

    $default  reduce using rule 69 (TYPE)


State 5

   70 TYPE: T_CHAR .

    $default  reduce using rule 70 (TYPE)


State 6

   66 FACTOR: T_QUOTE . T_VARIABLE T_QUOTE
   67       | T_QUOTE . T_NUMBER T_QUOTE

    T_NUMBER    shift, and go to state 20
    T_VARIABLE  shift, and go to state 21


State 7

    0 $accept: ROOT . $end

    $end  shift, and go to state 22


State 8

    1 ROOT: BASE .

    $default  reduce using rule 1 (ROOT)


State 9

    2 BASE: FUNCTIONLIST .
    3     | FUNCTIONLIST . ALLSTATE
    8 FUNCTIONLIST: FUNCTIONLIST . FUNCTION
    9             | FUNCTIONLIST . DECLARATIONLIST FUNCTION

    T_RETURN    shift, and go to state 23
    T_WHILE     shift, and go to state 24
    T_FOR       shift, and go to state 25
    T_VARIABLE  shift, and go to state 26
    T_NUMINT    shift, and go to state 4
    T_IF        shift, and go to state 27
    T_INC_OP    shift, and go to state 28
    T_DEC_OP    shift, and go to state 29
    T_CHAR      shift, and go to state 5

    $default  reduce using rule 2 (BASE)

    FUNCTION         go to state 30
    ALLSTATE         go to state 31
    STATEMENTLIST    go to state 32
    STATEMENT        go to state 33
    IFLOOP           go to state 34
    WHILE            go to state 35
    FORLOOP          go to state 36
    DECLARATIONLIST  go to state 37
    DECLARATION      go to state 13
    TYPE             go to state 15
    INCDEC           go to state 38


State 10

    7 FUNCTIONLIST: FUNCTION .
   10             | FUNCTION . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 39

    $default  reduce using rule 7 (FUNCTIONLIST)


State 11

   68 FACTOR: FUNCTIONCALL .

    $default  reduce using rule 68 (FACTOR)


State 12

    4 BASE: DECLARATIONLIST .
    6 FUNCTIONLIST: DECLARATIONLIST . FUNCTION
   54 DECLARATIONLIST: DECLARATIONLIST . DECLARATION

    T_NUMINT  shift, and go to state 4
    T_CHAR    shift, and go to state 5

    $default  reduce using rule 4 (BASE)

    FUNCTION     go to state 40
    DECLARATION  go to state 41
    TYPE         go to state 15


State 13

   53 DECLARATIONLIST: DECLARATION .

    $default  reduce using rule 53 (DECLARATIONLIST)


State 14

    5 BASE: FACTOR .

    $default  reduce using rule 5 (BASE)


State 15

   11 FUNCTION: TYPE . T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   12         | TYPE . T_VARIABLE T_LBRACKET T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   13         | TYPE . T_VARIABLE T_LBRACKET T_RBRACKET T_LCURLY T_RCURLY
   14         | TYPE . T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET T_LCURLY T_RCURLY
   15         | TYPE . T_VARIABLE T_LBRACKET T_RBRACKET
   16         | TYPE . T_VARIABLE T_LBRACKET PARAMLIST T_RBRACKET
   55 DECLARATION: TYPE . T_VARIABLE T_SEMICOLON
   56            | TYPE . T_VARIABLE T_EQUAL EXPR T_SEMICOLON

    T_VARIABLE  shift, and go to state 42


State 16

   58 EXPR: EXPR . T_PLUS TERM
   59     | EXPR . T_MINUS TERM
   65 FACTOR: T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 43
    T_MINUS     shift, and go to state 44
    T_RBRACKET  shift, and go to state 45


State 17

   57 EXPR: TERM .
   60 TERM: TERM . T_TIMES FACTOR
   61     | TERM . T_DIVIDE FACTOR

    T_TIMES   shift, and go to state 46
    T_DIVIDE  shift, and go to state 47

    $default  reduce using rule 57 (EXPR)


State 18

   62 TERM: FACTOR .

    $default  reduce using rule 62 (TERM)


State 19

   48 FUNCTIONCALL: T_VARIABLE T_LBRACKET . ARGUMENTLIST T_RBRACKET
   49             | T_VARIABLE T_LBRACKET . T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_RBRACKET  shift, and go to state 48
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_QUOTE     shift, and go to state 6

    FUNCTIONCALL  go to state 11
    ARGUMENTLIST  go to state 49
    ARGUMENT      go to state 50
    EXPR          go to state 51
    TERM          go to state 17
    FACTOR        go to state 18


State 20

   67 FACTOR: T_QUOTE T_NUMBER . T_QUOTE

    T_QUOTE  shift, and go to state 52


State 21

   66 FACTOR: T_QUOTE T_VARIABLE . T_QUOTE

    T_QUOTE  shift, and go to state 53


State 22

    0 $accept: ROOT $end .

    $default  accept


State 23

   28 STATEMENT: T_RETURN . EXPR T_SEMICOLON
   31          | T_RETURN . T_VARIABLE INCDEC T_SEMICOLON
   32          | T_RETURN . INCDEC T_VARIABLE T_SEMICOLON

    T_LBRACKET  shift, and go to state 1
    T_NUMBER    shift, and go to state 2
    T_VARIABLE  shift, and go to state 54
    T_INC_OP    shift, and go to state 28
    T_DEC_OP    shift, and go to state 29
    T_QUOTE     shift, and go to state 6

    FUNCTIONCALL  go to state 11
    EXPR          go to state 55
    TERM          go to state 17
    FACTOR        go to state 18
    INCDEC        go to state 56


State 24

   43 WHILE: T_WHILE . T_LBRACKET COMPARE T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   44      | T_WHILE . T_LBRACKET COMPARE T_RBRACKET ALLSTATE T_RCURLY
   45      | T_WHILE . T_LBRACKET FACTOR T_RBRACKET T_LCURLY ALLSTATE T_RCURLY
   46      | T_WHILE . T_LBRACKET FACTOR T_RBRACKET T_LCURLY T_RCURLY

    T_LBRACKET  shift, and go to state 57


State 25

   47 FORLOOP: T_FOR . T_LBRACKET DECLARATION COMPARE T_SEMICOLON STATEMENT T_RBRACKET T_LCURLY ALLSTATE T_RCURLY

    T_LBRACKET  shift, and go to state 58


State 26

   27 STATEMENT: T_VARIABLE . ASSIGNMENT_OP EXPR
   30          | T_VARIABLE . INCDEC

    T_EQUAL         shift, and go to state 59
    T_MUL_ASSIGN    shift, and go to state 60
    T_DIV_ASSIGN    shift, and go to state 61
    T_MOD_ASSIGN    shift, and go to state 62
    T_ADD_ASSIGN    shift, and go to state 63
    T_SUB_ASSIGN    shift, and go to state 64
    T_LEFT_ASSIGN   shift, and go to state 65
    T_RIGHT_ASSIGN  shift, and go to state 66
    T_AND_ASSIGN    shift, and go to state 67
    T_XOR_ASSIGN    shift, and go to state 68
    T_OR_ASSIGN     shift, and go to state 69
    T_INC_OP        shift, and go to state 28
    T_DEC_OP        shift, and go to state 29

    INCDEC         go to state 70
    ASSIGNMENT_OP  go to state 71


State 27
